--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ a{
 .h2-el-fnt{
     font-family: "Libre Caslon Display",serif;
     font-weight: 400;
-    font-size: calc(18px + 1vw);
+    font-size: 32px;
 }
 
 .mt{
@@ -201,4 +201,35 @@ header{
     width: 26%;
     margin-top: 3%;
     margin-right: 3%;
+}
+
+
+/* ----------------------- APARTMENTS -------------------------- */
+
+.apartments{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 120px 120px;
+}
+
+.apartments .apartments-container{
+    margin-top: 50px;
+    width: 100%;
+    height: 100%;
+}
+
+.apartments .container-wraper{
+    display: flex;
+    width: 100%;
+}
+
+.apartments .apartments-container .apartments-container-item{
+    width: 31%;
+    margin: 0 1%;
+}
+
+.apartments .apartments-container .apartments-container-item .apartment-image img{
+    width: 100%;
 }
