--- a/css/apartmani.css
+++ b/css/apartmani.css
@@ -1,3 +1,16 @@
+header{
+    color: #000;
+}
+
+header a{
+    color: #000;
+}
+
+.nav-bar{
+    background-color: #fff;
+}
+
 .apartments{
-    margin-top: 175px;
+    background-color: rgb(245, 245, 245);;
+    margin-top: 140px;
 }
