povezani svi headeri

--- a/style.css
+++ b/style.css
@@ -149,6 +149,10 @@ header{
 
 /* ----------------------- HEADER ---------------------------------- */
 
+.hero {
+    height: 1 vh;
+}
+
 .hero-img{
     width: 100%;
     height: 100%;
