--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -1,3 +1,12 @@
+
+.hero-content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+}
+
 .contact{
     padding: 120px 120px;
     display: flex;
@@ -18,8 +27,44 @@
     width: 70%;
 }
 
+.line{
+    position: absolute;
+    height: 100px;
+    width: 1px;
+    background: #000;
+}
+
 .contact-right{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 30%;
+}
+
+.contact-top{
+    width: 100%;
+    padding: 0 20px 20px 20px;
+}
+
+.contact-top .contact-email{
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.contact-email form input{
+    background-color: transparent;
+    border: 0;
+    border-bottom: 1px solid black;
+    padding-bottom: 10px;
+    font-size: 16px;
+    font-weight: 200;
+    width: 100%;
+}
+
+.contact-down{
+    width: 100%;
+    margin-top: 80px;
+    padding: 0 20px 20px 20px;
 }
