--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ a{
     margin-top: 30px;
 }
 
+.mt-sm{
+    margin-top: 10px;
+}
+
 .ml-lg{
     margin-left: 80px;
 }
@@ -82,6 +86,11 @@ a{
 .plr{
     padding-left: 30px;
     padding-right: 30px;
+}
+
+.plr-lg{
+    padding-left: 80px;
+    padding-right: 80px;
 }
 /* ----------------------- root---------------------------------- */
 
