--- a/style.css
+++ b/style.css
@@ -92,6 +92,21 @@ a{
     padding-left: 80px;
     padding-right: 80px;
 }
+
+.section-bg{
+    background-color: var(--bggrey);
+}
+
+.hero-content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    margin-top: 30px;
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 5px;
+}
 /* ----------------------- root---------------------------------- */
 
 header{
