--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ a{
 
 .section-line{
     width: 200px;
-    height: 1px;
+    height: 2px;
     background: #000;
     margin-top: 30px;
 }
@@ -450,6 +450,58 @@ footer p {
 }
 
 /* ------------------- Gallery Apartments ----------------- */
+
+.w-three{
+    height: 450px;
+    width: 55%;
+    margin-top: 3%;
+    margin-right: 3%;
+}
+
+.w-two{
+    height: 450px;
+    width: 39%;
+    margin-top: 3%;
+    margin-right: 3%;
+}
+
+.w-one{
+    height: 450px;
+    width: 26%;
+    margin-top: 3%;
+    margin-right: 3%;
+}
+
+.main-gallery{
+    background-color: var(--bggrey);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 120px 120px;
+}
+
+.images{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.image-box{
+    object-fit: cover;
+}
+
+.image-box img{
+    width: 100%;
+    height: 100%;
+}
+
+/* ------------------- Mini Gallery ----------------------- */
+
+.image:hover{
+    cursor: pointer;
+}
 
 .row > .column {
     padding: 0 8px;
