--- a/style.css
+++ b/style.css
@@ -268,6 +268,33 @@ header{
     margin-top: 50px;
 }
 
+.image{
+    position: relative;
+}
+
+.image img{
+    display: block;
+}
+
+.image .image-overlay{
+    background-color: rgb(0, 0, 0, 0.5);
+    color: #fff;
+    position: absolute;
+    bottom: 0;
+    height: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transition: .5s ease-in-out;
+}
+
+.image:hover .image-overlay{
+    height: 100%;
+}
+
+
 .gallery-container img{
     width: 100%;
     height: 100%;
@@ -352,6 +379,8 @@ header{
 }
 
 .apartments .apartments-container .apartment-content-overlay{
+    background-color: rgb(0, 0, 0, 0.3);
+    color: #fff;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
