--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ header{
     background-color: transparent;
     position: absolute;
     top: 0;
-    height: 175px;
+    height: 126px;
     width: 100%;
     z-index: 3;
 }
@@ -133,12 +133,12 @@ header{
     position: absolute;
     top: 0;
     width: 100%;
-    height: 175px;
+    height: inherit;
     z-index: -2;
-    transition: all .25s ease-in-out; 
 }
 
 .upper-header{
+    height: inherit;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -148,6 +148,26 @@ header{
     padding-right: 80px;
 }
 
+header:hover {
+    color: #000;
+}
+
+header:hover .language a{
+    color: #000;
+}
+
+header:hover .header-gradient{
+    background-image: none;
+    background-color: #fff;
+}
+
+header:hover .nav-bar{
+    background-color: #fff;
+}
+
+header:hover .nav-bar a{
+    color: #000;
+}
 
 .booking{
     display: flex;
@@ -200,7 +220,8 @@ header{
 /* ----------------------- HEADER ---------------------------------- */
 
 .hero {
-    height: 1 vh;
+    width: 100%;
+    height: 100vh;
 }
 
 .hero-img{
