--- a/style.css
+++ b/style.css
@@ -25,25 +25,25 @@ a{
 }
 
 .section-line{
-    width: 200px;
-    height: 2px;
+    width: 12.5rem;
+    height: 0.125rem;
     background: #000;
-    margin-top: 30px;
+    margin-top: 1.875rem;
 }
 
 .txt-caps{
     text-transform: uppercase;
-    letter-spacing: 1px;
+    letter-spacing: 0.0625rem;
 }
 
 .h1-el-fnt{
     font-weight: 300;
-    font-size: 36px;
+    font-size: 2.25rem;
 }
 
 .h2-el-fnt{
     font-weight: 200;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 .fnt-w-l{
