Button changes and hover added

--- a/css/apartmani.css
+++ b/css/apartmani.css
@@ -11,6 +11,5 @@ header a{
 }
 
 .apartments{
-    background-color: rgb(245, 245, 245);;
-    margin-top: 140px;
+    background-color: rgb(245, 245, 245);
 }
