--- a/style.css
+++ b/style.css
@@ -195,6 +195,17 @@ header:hover .nav-bar a{
     margin-right: 1.875rem;
 }
 
+.burger-menu{
+    display: none;
+    width: 70px;
+    height: 70px;
+}
+
+.burger-menu img{
+    width: 100%;
+    height: 100%;
+}
+
 .btn{
     background-color: var(--gold);
     color: #fff;
@@ -877,3 +888,54 @@ footer p {
   .hover-shadow:hover {
     box-shadow: 0 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.2), 0 0.375rem 1.25rem 0 rgba(0, 0, 0, 0.19);
   }
+
+/* --------------------- RESPONSIVE ----------------------------------- */
+
+@media only screen and (max-width: 481px) {
+    header{
+        width: 100%;
+    }
+    
+    .about-us{
+        flex-direction: column;
+        padding: 20px;
+    }
+    .about-us .about{
+        width: 100%;
+        margin-left: 0;
+        padding: 0;
+    }
+    .about-us .mini-gallery {
+        width: 100%;
+        padding: 40px 0;
+    }
+
+    .gallery{
+        padding: 20px 20px;
+    }
+
+    
+    .gallery-container .w-one{
+        height: 200px;
+    }
+
+    .gallery-container .w-two{
+        height: 200px;
+    }
+
+    .gallery-container .w-three{
+        height: 200px;
+    }
+}
+
+@media only screen and (max-width: 1300px) {
+    .nav-bar{
+        display: none;
+    }
+    .booking-section{
+        display: none;
+    }
+    .burger-menu{
+        display: block;
+    }
+}
