Update gallery responsiveness and refactor JS slider logic
Introduced a new responsive design in the CSS for the gallery feature
with adjustments to various container elements to improve visibility on
smaller screens. A hidden slider component was added to enhance the
mobile user experience. Additionally, streamlined the JavaScript slider
logic by commenting out the outdated code and preparing for a future
update with new imagery and text. Reduced top margin for the apartment
container to maintain layout consistency across different device sizes.

--- a/css/galerija.css
+++ b/css/galerija.css
@@ -1,3 +1,30 @@
 footer{
     background-color: #fff;
 }
+
+.slider {
+    height: 31.25rem;
+}
+
+.hidden {
+    display: none;
+}
+
+@media only screen and (max-width: 1400px) {
+    .apartments-container {
+        display: none;
+    }
+
+    .hidden {
+        display: flex;
+        justify-content: center;
+    }
+
+    .apartments-container-item{
+        width: 80%;
+    }
+}
+
+@media only screen and (max-width: 770px) {
+    
+}
